fix projects display on mobile landscape

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,5 @@
 /* opener: set dynamic grid */
-@media (min-width: 736px) {
+@media (min-width: 897px) {
   .project-grid {
     display: grid;
     grid-gap: 10%;
